Workspace/host/.metadata/.plugins/org.eclipse.cdt.ui/ArraysPassing.build.log
20:06:44 **** Incremental Build of configuration Debug for project ArraysPassing ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o ArraysPassing.o "..\\ArraysPassing.c" 
..\ArraysPassing.c: In function 'main':
..\ArraysPassing.c:16:2: error: expected ',' or ';' before 'for'
   16 |  for(uint32_t i=0; i<10; i++){
      |  ^~~
..\ArraysPassing.c:16:20: error: 'i' undeclared (first use in this function)
   16 |  for(uint32_t i=0; i<10; i++){
      |                    ^
..\ArraysPassing.c:16:20: note: each undeclared identifier is reported only once for each function it appears in
..\ArraysPassing.c:16:29: error: expected ';' before ')' token
   16 |  for(uint32_t i=0; i<10; i++){
      |                             ^
      |                             ;
..\ArraysPassing.c:16:29: error: expected statement before ')' token

20:06:45 Build Failed. 4 errors, 0 warnings. (took 283ms)

